[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Objects/bomb_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/Objects/Bomb.gd" type="Script" id=20]

[sub_resource type="CircleShape2D" id=2]
radius = 72.0

[sub_resource type="CircleShape2D" id=3]
radius = 19.105

[node name="Bomb" type="KinematicBody2D"]
position = Vector2( 0, -16 )
collision_layer = 20
collision_mask = 20
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 16 )
collision_layer = 21
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "bomb_lit"
frame = 6
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 3 )
one_way_collision = true

[connection signal="body_entered" from="Area2D" to="." method="_on_bomb_area_enter"]
[connection signal="body_exited" from="Area2D" to="." method="_on_bomb_area_exit"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="explosionDone"]
